@@ -1,5 +1,7 @@
 = master
 
+* Deprecate rendering templates outside of render plugin :allowed_paths option by default (jeremyevans)
+
 * Deprecate :cache=>nil/false render plugin option overriding :cache render/view method option (jeremyevans)
 
 * Deprecate using :header matcher in header_matchers plugin without :header_matcher_prefix app option (jeremyevans)
